--- a/bio.css
+++ b/bio.css
@@ -1,5 +1,5 @@
 #bio {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Montserrat', 'Rubik', sans-serif;
   margin-top: 20vh;
   margin-left: 5vw;
   margin-right: 5vw;
