attempt to fix margin issue

--- a/bio.css
+++ b/bio.css
@@ -1,6 +1,6 @@
 #bio {
   font-family: 'Montserrat', 'Rubik', sans-serif;
-  margin-top: 20vh;
+  margin-top: 20vmin;
   margin-left: 5vw;
   margin-right: 5vw;
   height: 50vh;
@@ -9,7 +9,7 @@
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-areas: 
+  grid-template-areas:
     "bioPic bioInfo bioInfo";
 }
 
@@ -39,6 +39,7 @@ bioFooter {
 
 @media screen and (max-width: 1140px) { 
   #bio {
+    margin-top: 50vmin;
     display: flex;
     flex-direction: column;
   }
@@ -50,6 +51,7 @@ bioFooter {
 
 @media screen and (max-width: 600px) { 
   #bio {
+    margin-top: 50vmin;
     display: flex;
     flex-direction: column;
   }
