--- a/bio.css
+++ b/bio.css
@@ -3,7 +3,7 @@
   margin-top: 20vmin;
   margin-left: 5vw;
   margin-right: 5vw;
-  height: 50vh;
+  height: 50vmin;
   font-size: 3vmin;
 
   display: grid;
